--- a/index.html
+++ b/index.html
@@ -2,45 +2,162 @@
     <head>
         <title>Twitter</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-3">
+                <div class="col-2">
+                    <br/>
                     <ul class="list-group">
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Página inicial</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Explorar</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Notificações</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Mensagens</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Itens salvos</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Listas</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Perfil</a></li>
-                        <li class="list-group-item tw-list-group-item"><a href="#" class="tw-link">Mais</a></li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-twitter"></span>
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-home"></span>
+                                Página inicial
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-hashtag"></span>
+                                Explorar
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-bell"></span>
+                                Notificações
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-envelope"></span>
+                                Mensagens
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-bookmark"></span>
+                                Itens salvos
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-list"></span>
+                                Listas
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span>
+                                    <img src="images/profile.png" style="width: 24px;margin-right: 10px" class="rounded-circle"/>
+                                </span>
+                                Perfil
+                            </a>
+                        </li>
+                        <li class="list-group-item tw-list-group-item">
+                            <a href="#" class="tw-link">
+                                <span class="fa fa-ellipsis-h"></span>
+                                Mais
+                            </a>
+                        </li>
                     </ul>
                     <br/>
                     <button class="btn btn-light btn-block btn-lg tw-btn-primary">Tweet</button>
                 </div>
-                <div class="col-6">
+                <div class="col-7 tw-border-left tw-border-right">
+                    <br/>
                     <div class="row">
                         <div class="col-11">
-                            <h4><strong>Página inicial</strong></h4>
+                            <h5><strong>Página inicial</strong></h5>
+                        </div>
+                        <div class="col-1">
+                            <span class="fa fa-star"></span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-2">
-
+                        <div class="col-1">
+                            <img src="images/profile.png" style="width: 38px;margin-right: 10px" class="rounded-circle"/>
                         </div>
+                        <div class="col-11">
+                            <input class="form-control tw-input-light" placeholder="O que está acontecendo?"/>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row">
                         <div class="col-10">
-                            <input class="form-control" placeholder="O que está acontecendo?"/>
+                            <span class="fa fa-image"></span>
+                            <span class="fa fa-smile-o"></span>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
+                    <br/>
                     <div class="row">
                         <div class="col-12">
-                            <input class="form-control" placeholder="Buscar no Twitter"/>
+                            <input class="form-control tw-input-gray" placeholder="Buscar no Twitter"/>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card tw-card">
+                                <div class="card-body">
+                                    <h5 class="card-title tw-card-title">Assuntos para você</h5>
+                                    <hr/>
+                                    <label class="tw-label">Assuntos do momento no Brasil</label>
+                                    <b>Lorem ipsum</b>
+                                    <p class="tw-label">503 mil twittes</p>
+                                    <hr/>
+                                    <b>Lorem ipsum</b>
+                                    <p class="tw-label">53 mil twittes</p>
+                                    <hr/>
+                                    <b>Lorem ipsum</b>
+                                    <p class="tw-label">3.410 mil twittes</p>
+                                    <hr/>
+                                    <a class="tw-link tw-link-primary" href="#">Mostrar mais</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br/>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card tw-card">
+                                <div class="card-body">
+                                    <h5 class="card-title tw-card-title">Quem seguir</h5>
+                                    <hr/>
+                                    <div class="row">
+                                        <div class="col-3">
+                                            <img src="images/profile.png" style="width: 40px;" class="rounded-circle"/>
+                                        </div>
+                                        <div class="col-6">
+                                            <b>Lorem ipsum</b>
+                                            <p class="tw-label">@loremipsum</p>
+                                        </div>
+                                        <div class="col-2">
+                                            <button>Seguir</button>
+                                        </div>
+                                    </div>
+
+                                    
+                                    <hr/>
+                                    <b>Lorem ipsum</b>
+                                    <p class="tw-label">53 mil twittes</p>
+                                    <hr/>
+                                    <b>Lorem ipsum</b>
+                                    <p class="tw-label">3.410 mil twittes</p>
+                                    <hr/>
+                                    <a class="tw-link tw-link-primary" href="#">Mostrar mais</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
