--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
 
@@ -73,7 +74,7 @@
                 </div>
                 <div class="col-7 tw-border-left tw-border-right">
                     <br/>
-                    <div class="row">
+                    <div class="row tw-border-bottom">
                         <div class="col-11">
                             <h5><strong>Página inicial</strong></h5>
                         </div>
@@ -81,6 +82,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                     </div>
+                    <br/>
                     <div class="row">
                         <div class="col-1">
                             <img src="images/profile.png" style="width: 38px;margin-right: 10px" class="rounded-circle"/>
@@ -96,6 +98,59 @@
                             <span class="fa fa-smile-o"></span>
                         </div>
                     </div>
+
+                    <br/>
+                    <div class="row tw-border-bottom">
+                        <div class="col-1">
+                            <img src="images/profile.png" style="width: 42px" class="rounded-circle"/>
+                        </div>
+                        <div class="col-10">
+                            <b>Lorem ipsum dolor sit amet</b> @loremipsum · 5s<br/>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non molestie velit. Etiam sit amet tincidunt sem.
+                                Mauris enim elit, semper et nisl in, sollicitudin luctus odio.
+                            </p>
+                            <span class="fa fa-comment-o"></span>
+                            <span class="fa fa-retweet"></span>
+                            <span class="fa fa-heart-o"></span>
+                            <span class="fa fa-upload"></span>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row tw-border-bottom">
+                        <div class="col-1">
+                            <img src="images/profile.png" style="width: 42px" class="rounded-circle"/>
+                        </div>
+                        <div class="col-10">
+                            <b>Lorem ipsum dolor sit amet</b> @loremipsum · 30s<br/>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non molestie velit. Etiam sit amet tincidunt sem.
+                                Mauris enim elit, semper et nisl in, sollicitudin luctus odio.
+                            </p>
+                            <span class="fa fa-comment-o"></span>
+                            <span class="fa fa-retweet"></span>
+                            <span class="fa fa-heart-o"></span>
+                            <span class="fa fa-upload"></span>
+                        </div>
+                    </div>
+                    <br/> 
+                    <div class="row tw-border-bottom">
+                        <div class="col-1">
+                            <img src="images/profile.png" style="width: 42px" class="rounded-circle"/>
+                        </div>
+                        <div class="col-10">
+                            <b>Lorem ipsum dolor sit amet</b> @loremipsum · 35s<br/>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non molestie velit. Etiam sit amet tincidunt sem.
+                                Mauris enim elit, semper et nisl in, sollicitudin luctus odio.
+                            </p>
+                            <span class="fa fa-comment-o"></span>
+                            <span class="fa fa-retweet"></span>
+                            <span class="fa fa-heart-o"></span>
+                            <span class="fa fa-upload"></span>
+                        </div>
+                    </div>
+                    <br/>                                       
                 </div>
                 <div class="col-3">
                     <br/>
@@ -111,7 +166,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title tw-card-title">Assuntos para você</h5>
                                     <hr/>
-                                    <label class="tw-label">Assuntos do momento no Brasil</label>
+                                    <label class="tw-label">Assuntos do momento no Brasil</label><br/>
                                     <b>Lorem ipsum</b>
                                     <p class="tw-label">503 mil twittes</p>
                                     <hr/>
@@ -135,7 +190,7 @@
                                     <h5 class="card-title tw-card-title">Quem seguir</h5>
                                     <hr/>
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <img src="images/profile.png" style="width: 40px;" class="rounded-circle"/>
                                         </div>
                                         <div class="col-6">
@@ -143,18 +198,39 @@
                                             <p class="tw-label">@loremipsum</p>
                                         </div>
                                         <div class="col-2">
-                                            <button>Seguir</button>
+                                            <button class="btn btn-light tw-btn-light">Seguir</button>
                                         </div>
                                     </div>
 
-                                    
                                     <hr/>
-                                    <b>Lorem ipsum</b>
-                                    <p class="tw-label">53 mil twittes</p>
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <img src="images/profile.png" style="width: 40px;" class="rounded-circle"/>
+                                        </div>
+                                        <div class="col-6">
+                                            <b>Lorem ipsum</b>
+                                            <p class="tw-label">@loremipsum</p>
+                                        </div>
+                                        <div class="col-2">
+                                            <button class="btn btn-light tw-btn-light">Seguir</button>
+                                        </div>
+                                    </div>
+
                                     <hr/>
-                                    <b>Lorem ipsum</b>
-                                    <p class="tw-label">3.410 mil twittes</p>
-                                    <hr/>
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <img src="images/profile.png" style="width: 40px;" class="rounded-circle"/>
+                                        </div>
+                                        <div class="col-6">
+                                            <b>Lorem ipsum</b>
+                                            <p class="tw-label">@loremipsum</p>
+                                        </div>
+                                        <div class="col-2">
+                                            <button class="btn btn-light tw-btn-light">Seguir</button>
+                                        </div>
+                                    </div>                                    
+
+
                                     <a class="tw-link tw-link-primary" href="#">Mostrar mais</a>
                                 </div>
                             </div>
