preview imagem timeline

--- a/index.html
+++ b/index.html
@@ -135,9 +135,19 @@
                         <div class="col-10 col-md-11">
                                 <b>Lorem ipsum dolor</b><lablel class="tw-label"> @loremipsum · 30s</lablel><br/>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non molestie velit. Etiam sit amet tincidunt sem.
-                                Mauris enim elit, semper et nisl in, sollicitudin luctus odio.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             </p>
+                            <div class="card tw-img-preview">
+                                <img src="images/image_blank.png" class="card-img-top tw-img-preview" alt="..."/>
+                                <div class="card-body">
+                                    <p class="card-text tw-card-text">
+                                        Suspendisse non molestie velit. Etiam sit amet tincidunt sem.
+                                        Mauris enim elit, semper et nisl in, sollicitudin luctus odio.
+                                        Categoria<br/>
+                                        <span class="fa fa-link"></span>www.example.com.br
+                                    </p>
+                                </div>
+                            </div>
                             <span class="fa fa-comment-o"></span>
                             <span class="fa fa-retweet"></span>
                             <span class="fa fa-heart-o"></span>
